Allow loading of invalid recipes and add validity checks
Change packet implementation